# flask_message

./: .gitignore  DUMPFILENAME.sql  Makefile  README.md  db.py  main.py  pyproject.toml  settings.py  url.py  views.py
models/: console.sql  helpful.py  model.py  shema.py
models/test/: test_db.py
static/css/: main.css
static/js/: main.js
templates/: enter_user.html  index.html  my_message.html  register_account.html
